[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/friendly-potato-pixels/popups/new_file_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/friendly-potato-pixels/popups/base_dialog.tscn" type="PackedScene" id=2]

[node name="NewFileDialog" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="CanvasSize" type="HBoxContainer" parent="VBoxContainer" index="0"]
margin_right = 1580.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/CanvasSize" index="0"]
margin_top = 19.0
margin_right = 788.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Canvas Size"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CanvasSize" index="1"]
margin_left = 792.0
margin_right = 1580.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="CanvasX" type="HBoxContainer" parent="VBoxContainer/CanvasSize/VBoxContainer" index="0"]
margin_right = 788.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasX" index="0"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = "X"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasX" index="1"]
margin_left = 12.0
margin_right = 788.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "32"
placeholder_text = "Canvas width"

[node name="CanvasY" type="HBoxContainer" parent="VBoxContainer/CanvasSize/VBoxContainer" index="1"]
margin_top = 28.0
margin_right = 788.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasY" index="0"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
text = "Y"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasY" index="1"]
margin_left = 11.0
margin_right = 788.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "32"
placeholder_text = "Canvas height"
